src/App.css
@font-face {
  font-family: "Heming";
  src: url("./fonts/HemingVariable.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Agnes";
  src: url("./fonts/Agnes-Regular.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Henke";
  src: url("./fonts/Henke-DL3416.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

#root {
  max-width: 95vw;
  max-height: 95vh;
  margin: 0 auto;
  text-align: center;
}

/* components */

.flexbox {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.main {
  width: 95vw;
  height: 95vh;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

@media (max-width: 700px) {
  .main {
    flex-direction: column;
  }
}

.main .vertical-navigation {
  min-width: 13%;
  width: 13%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 10px;
}

.main .vertical-navigation * {
  cursor: pointer;
}

@media (max-width: 700px) {
  .main .vertical-navigation {
    height: 10%;
    width: 100%;
    flex-direction: row;
    min-width: 100%;
    padding: 0px;
  }
}

.title-container {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

@media (max-width: 700px) {
  .title-container {
    width: 40%;
  }
}

.pages-buttons-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

@media (max-width: 700px) {
  .pages-buttons-container {
    flex-grow: 1;
    font-size: 12px;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    padding: 5px;
  }

  .pages-buttons-container > :nth-child(odd) {
    text-align: left; /* Align left for the first and third items */
  }

  .pages-buttons-container > :nth-child(even) {
    text-align: right; /* Align right for the second and fourth items */
  }
}

.main .main-content {
  width: auto;
  height: 100%;
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  overflow: scroll;
  overflow-x: hidden;
  -webkit-overflow-scrolling: touch;
}

.main .main-content::-webkit-scrollbar {
  display: none; /* Hide scrollbar for Chrome, Safari, and Opera */
}

/* Hide scrollbar for IE, Edge, and Firefox */
.main .main-content {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

.main .main-content .image {
  max-width: 100%;
  max-height: 100%;
  width: 100%;
  height: 100%;
}

/* DISCOGRAPHY */
.discography-main {
  display: flex;
  flex-direction: row;
}

.disc-img-container {
  min-width: 10%;
  width: 10%;
  height: 100%;
  padding: 5px;
  overflow: hidden;
}

.disc-img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: 25%;
  opacity: 0;
  transition: opacity 0.8s ease-in-out 0.1s; /* Transition for fade-in effect */
}

.disc-img.loaded {
  opacity: 1;
}

.disc-release-container {
  flex-grow: 1;
}

.release {
  height: 350px;
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 20px;
  border: 0.5px solid;
  margin: 5px;
}

@media (max-width: 700px) {
  .release {
    min-height: 500px;
    max-height: 90vh;
    height: auto;
    width: 95vw;
    flex-direction: column;
    justify-content: flex-end;
    padding: 5px;
  }
}

.release-info {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
}

.image-container {
  height: 100%;
  display: flex;
  justify-content: center;
}

@media (max-width: 700) {
  .image-container {
    height: auto;
    width: 50%;
  }
}

.info-container-grid {
  flex-grow: 1;
  height: auto;
  display: grid;
  grid-template-columns: 2fr 1fr;
  margin-left: 40px;
  margin-top: 20px;
}

@media (max-width: 700px) {
  .info-container-grid {
    margin-left: 3px;
    margin-right: 3px;
  }
}

.info-container-grid .item-tracklist {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

@media (max-width: 700px) {
  .info-container-grid .item-tracklist {
    justify-content: space-between;
  }
}

.item-genre {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.player-container {
  flex-grow: 1;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

@media (max-width: 700px) {
  .player-container {
    margin-top: 5px;
    height: 500px;
  }
}

.button-container {
  width: 60px;
}

.release .image-release {
  height: 100%;
}

@media (max-width: 700px) {
  .release .image-release {
    /* margin-top: 5px; */
    width: 70%;
    height: auto;
  }
}
.release .image-release:hover {
  cursor: pointer;
}

/* LIVESETS */
.live-grid {
  height: 100%;
  width: 100%;
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 10px;
}

@media (max-width: 700px) {
  .live-grid {
    grid-template-columns: 1fr;
  }
}

.grid-item {
  border: 0.5px solid;
}

@media (max-width: 700px) {
  .grid-item {
    min-height: 400px;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }
}

.grid-item .info {
  display: flex;
  justify-content: space-between;
  margin-left: 5px;
  margin-right: 5px;
}

/* VIsualArt */
.main-flex {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

.box-tag {
  height: 100%;
  width: 10%;
  overflow: auto;
}

.box-tag::-webkit-scrollbar {
  display: none; /* Hide scrollbar for Chrome, Safari, and Opera */
}

/* Hide scrollbar for IE, Edge, and Firefox */
.box-tag {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

.photo-info-container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  margin-left: 40px;
}

.visual-info {
  width: 100%;
  height: 25%;
  text-align: justify;
  margin-bottom: 20px;
}

.big-photo-container-works {
  width: 100%;
  height: 70%;
  flex-grow: 1;
  overflow: auto;
  display: flex;
  align-items: center;
}

.image-big {
  max-height: 100%;
  width: 100%;
  height: auto;
  cursor: zoom-in;
  overflow: hidden;
}

.image-big-zoom-works {
  height: 200%;
  width: 200%;
}

/* INFO */
.info-page {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
}

.info-page::-webkit-scrollbar {
  display: none; /* Hide scrollbar for Chrome, Safari, and Opera */
}

/* Hide scrollbar for IE, Edge, and Firefox */
.info-page {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

.info-img {
  width: 100%;
  height: 100%;
  opacity: 0;
  transition: opacity 0.5s ease-in-out 0.1s; /* Transition for fade-in effect */
}

.info-img.loaded {
  opacity: 1; /* Fully visible once loaded */
}

.info-text {
  min-height: 50%;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: justify;
}

@media (max-width: 700px) {
  .info-text {
    min-height: auto;
  }
}

.contacts-container {
  display: flex;
  justify-content: space-between;
  width: 100%;
}

@media (max-width: 700px) {
  .contacts-container {
    font-size: 14px;
    text-wrap: nowrap;
  }
}

